# mojitOS

./: .gitignore  Cargo.toml  Makefile  build_disk.sh  mojitos.elf  my_target.json  setup_dev.sh  unsetup_dev.sh
.cargo/: config.toml
iso/boot/grub/: grub.cfg
iso/home/bob/: hello
linker/: x86.ld
scripts/: debug.sh
src/: error.rs  kmain.rs  lib.rs  main.rs
src/arch/: mod.rs
src/arch/common/: meminfo.rs  mod.rs  multiboot.rs  pmm.rs
src/arch/x86/: acpi.rs  apic.rs  boot.S  bootmem.rs  bootstrap.S  context.rs  cpu.rs  cpuid.rs  gdt.S  gdt.rs  idt.rs  int.S  io.rs  iomem.rs  irq.rs  kstart.rs  lock.rs  mapping.S  mod.rs  paging.S  paging.rs  pci.rs  pic.rs  reload_segments.S  reload_segments.s  routines.S  timer.rs  util.rs  vmm.rs  x86.json
src/driver/: input.rs  kbd.rs  mod.rs  pci_ide.rs  serial.rs  timer.rs  vga.rs
src/driver/pci/: config.rs  id.rs  mod.rs
src/fs/: block.rs  ext2.rs  mod.rs  vfs.rs
src/klib/: lock.rs  log.rs  mem.rs  mod.rs  time.rs
src/memory/: mapper.rs  mod.rs
src/memory/allocator/: bitmap.rs  buddy.rs  bump.rs  mod.rs
src/memory/pmm/: bitmap.rs  mod.rs
src/memory/vmm/: bump.rs  listalloc.rs  mapper.rs  mod.rs
src/proc/: schedule.rs
src/utils/: macros.rs  mod.rs  rawbox.rs
