[package]
name = "mojitos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
# volatile = "0.4.6" requires to implement Deref Trait, cannot do
volatile = "0.2.6" # TODO maybe implement it myself ? 


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[features]
inline-asm = []

