[package]
name = "mojitos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[features]
inline-asm = []
naked = []

